# gcp-fastapi-poetry

./: .gitignore  Dockerfile  LICENSE.md  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gcp_fastapi_poetry/: api.py  types.py
tests/: conftest.py
tests/integration/: test_temp.py
tests/unit/: test_api.py
